Refactor markup